--- a/Fleet_Manager_Android_App/app/src/main/res/layout/manager_main_panel.xml
+++ b/Fleet_Manager_Android_App/app/src/main/res/layout/manager_main_panel.xml
@@ -66,4 +66,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="MissingConstraints" />
 
+    <Button
+        android:id="@+id/repairStatusButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Zmien stastus naprawy"
+        app:layout_constraintTop_toBottomOf="@id/vehiclesPreviewButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="MissingConstraints" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
