--- a/Fleet_Manager_Android_App/app/src/main/res/layout/manager_repairs_panel.xml
+++ b/Fleet_Manager_Android_App/app/src/main/res/layout/manager_repairs_panel.xml
@@ -46,4 +46,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="MissingConstraints" />
 
+    <Button
+        android:id="@+id/vehicleStatusButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Status pojazdów"
+        app:layout_constraintTop_toBottomOf="@id/repairStatusButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="MissingConstraints" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
