--- a/Fleet_Manager_Android_App/app/src/main/res/values/colors.xml
+++ b/Fleet_Manager_Android_App/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="white_second">#F7F7F7</color>
+    <color name="purple_new">#BFA9FF</color>
+    <color name="grey">#D9D9D9</color>
+
 </resources>
