Updated ui and import optymalization

--- a/Fleet_Manager_Android_App/app/src/main/res/layout/add_repair_panel.xml
+++ b/Fleet_Manager_Android_App/app/src/main/res/layout/add_repair_panel.xml
@@ -1,66 +1,106 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp">
+
+    <!-- Logo -->
+    <ImageView
+        android:id="@+id/logoImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/moloft"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:text="Dodaj naprawe"
+        android:layout_marginTop="24dp"
+        android:textSize="20dp"
+        android:textColor="@color/text"
+        android:fontFamily="@font/clash_display_semi_bold"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Pojazd"
+        android:layout_marginTop="16dp"
+        android:textColor="@color/text"
+        android:fontFamily="@font/clash_display_medium"/>
 
     <EditText
         android:id="@+id/vehicleEditText"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Pojazd"
+        android:hint="wpisz..."
+        android:textSize="12dp"
         android:inputType="text"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintVertical_bias="0.3"/>
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Problem"
+        android:layout_marginTop="16dp"
+        android:textColor="@color/text"
+        android:fontFamily="@font/clash_display_medium"/>
 
     <EditText
         android:id="@+id/problemEditText"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Problem"
-        android:inputType="text"
-        app:layout_constraintTop_toBottomOf="@id/vehicleEditText"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintVertical_bias="0.4"/>
+        android:hint="wpisz..."
+        android:textSize="12dp"
+        android:inputType="text"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Opis"
+        android:layout_marginTop="16dp"
+        android:textColor="@color/text"
+        android:fontFamily="@font/clash_display_medium"/>
 
     <EditText
         android:id="@+id/descriptionEditText"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Opis"
-        android:inputType="textMultiLine"
-        app:layout_constraintTop_toBottomOf="@id/problemEditText"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintVertical_bias="0.5"/>
+        android:hint="wpisz..."
+        android:textSize="12dp"
+        android:inputType="textMultiLine"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Data"
+        android:layout_marginTop="16dp"
+        android:textColor="@color/text"
+        android:fontFamily="@font/clash_display_medium"/>
 
     <EditText
         android:id="@+id/dateEditText"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Data"
-        android:inputType="datetime"
-        app:layout_constraintTop_toBottomOf="@id/descriptionEditText"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintVertical_bias="0.6"/>
+        android:hint="wpisz..."
+        android:textSize="12dp"
+        android:inputType="datetime"/>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
     <Button
         android:id="@+id/addRepairButton"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Dodaj naprawę"
-        app:layout_constraintTop_toBottomOf="@id/dateEditText"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintVertical_bias="0.7"/>
+        android:layout_marginTop="16dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
