--- a/Fleet_Manager_Android_App/app/src/main/res/layout/activity_permissions.xml
+++ b/Fleet_Manager_Android_App/app/src/main/res/layout/activity_permissions.xml
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_color"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <ImageView
+        android:id="@+id/logoImageView"
+        android:layout_width="175dp"
+        android:layout_height="29dp"
+        android:src="@drawable/moloft"
+        android:layout_marginTop="61dp"
+        android:elevation="4dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/titleTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Witaj w aplikacji!"
+        style="@style/ClashDisplayFontMediumStyle"
+        android:textColor="@color/text"
         android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/descriptionTextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <TextView
-        android:id="@+id/descriptionTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Aby korzystać z aplikacji, potrzebujemy Twojej zgody na udzielenie następujących uprawnień:"
-        android:textSize="16sp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
-        app:layout_constraintBottom_toTopOf="@+id/grantPermissionsButton"
+        android:layout_marginTop="61dp"
+        app:layout_constraintTop_toBottomOf="@+id/logoImageView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -35,13 +35,13 @@
         android:id="@+id/grantPermissionsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sprawdź uprawnienia ponownie"
-        android:textSize="18sp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
+        style="@style/FleetManager.PrimaryButton"
+        android:text="Sprawdź uprawnienia ponownie"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/titleTextView"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
