--- a/Fleet_Manager_Android_App/app/src/main/res/layout/activity_repair_status_panel.xml
+++ b/Fleet_Manager_Android_App/app/src/main/res/layout/activity_repair_status_panel.xml
@@ -1,37 +1,187 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp">
+
+    <ImageView
+        android:id="@+id/logoImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/moloft"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/titleLabel"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Panel Napraw"
+        android:fontFamily="@font/clash_display_semi_bold"
+        android:textColor="@color/text"
+        android:textAlignment="center"
+        android:textSize="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/logoImageView"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="16dp" />
+
+    <TextView
+        android:id="@+id/labelRepairId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ID Naprawy"
+        android:fontFamily="@font/clash_display_medium"
+        android:textColor="@color/text"
+        android:textSize="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/titleLabel"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="16dp" />
 
     <Spinner
         android:id="@+id/repairSpinner"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/repairDetailsTextView"
+        android:fontFamily="@font/clash_display_medium"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/labelRepairId" />
 
-    <TextView
-        android:id="@+id/repairDetailsTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+    <LinearLayout
+        android:id="@+id/columnContainer"
+        app:layout_constraintVertical_weight="1"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/repairSpinner"
         app:layout_constraintBottom_toTopOf="@+id/completeRepairButton"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/repairSpinner" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/primary">
+
+        <LinearLayout
+            android:id="@+id/leftColumn"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            tools:ignore="Suspicious0dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ID Naprawy"
+                android:fontFamily="@font/clash_display_medium"
+                android:textColor="@color/colorOnPrimary"
+                android:layout_marginBottom="35dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ID Pojazdu"
+                android:fontFamily="@font/clash_display_medium"
+                android:textColor="@color/colorOnPrimary"
+                android:layout_marginBottom="15dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ID Problemu"
+                android:fontFamily="@font/clash_display_medium"
+                android:textColor="@color/colorOnPrimary"
+                android:layout_marginBottom="15dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Status"
+                android:fontFamily="@font/clash_display_medium"
+                android:textColor="@color/colorOnPrimary"
+                android:layout_marginBottom="15dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Data"
+                android:fontFamily="@font/clash_display_medium"
+                android:textColor="@color/colorOnPrimary"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/rightColumn"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            tools:ignore="Suspicious0dp">
+
+            <TextView
+                android:id="@+id/idRepairEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="35dp"
+                android:fontFamily="@font/clash_display_medium"
+                android:textColor="@color/secondary" />
+
+            <TextView
+                android:id="@+id/idVehicleEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/clash_display_medium"
+                android:textColor="@color/colorOnPrimary"
+                android:layout_marginBottom="15dp"/>
+
+            <TextView
+                android:id="@+id/idProblemEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/clash_display_medium"
+                android:textColor="@color/colorOnPrimary"
+                android:layout_marginBottom="15dp"/>
+
+            <TextView
+                android:id="@+id/statusEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/clash_display_medium"
+                android:textColor="@color/colorOnPrimary"
+                android:layout_marginBottom="15dp"/>
+
+            <TextView
+                android:id="@+id/dateEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/clash_display_medium"
+                android:textColor="@color/colorOnPrimary" />
+
+        </LinearLayout>
+    </LinearLayout>
 
     <Button
         android:id="@+id/completeRepairButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Zakończ naprawę"
+        app:layout_constraintTop_toBottomOf="@+id/columnContainer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
