--- a/Fleet_Manager_Android_App/app/src/main/res/layout/choose_vehicle_panel.xml
+++ b/Fleet_Manager_Android_App/app/src/main/res/layout/choose_vehicle_panel.xml
@@ -1,21 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
 
+    <!-- Logo -->
+    <ImageView
+        android:id="@+id/logoImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/moloft"
+        android:layout_gravity="center"
+        android:layout_marginBottom="16dp" />
+
+    <!-- Label: Wprowadź numer rejestracyjny -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Wprowadź numer rejestracyjny"
+        android:textAppearance="@style/ClashDisplayFontMediumStyle"
+        android:textSize="16sp"
+        android:layout_marginTop="61dp" />
+
+    <!-- EditText: Numer rejestracyjny -->
     <EditText
         android:id="@+id/editTextLicensePlate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Numer rejestracyjny"
-        android:inputType="text" />
+        android:inputType="text"
+        android:textAppearance="@style/ClashDisplayFontMediumStyle"
+        android:layout_marginBottom="16dp" />
 
-    <Button
-        android:id="@+id/buttonSubmit"
-        android:layout_width="wrap_content"
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
+    <!-- Przyciski -->
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Zatwierdź" />
+        android:orientation="horizontal"
+        android:layout_gravity="bottom">
+
+        <!-- Przycisk previous -->
+        <ImageButton
+            android:id="@+id/previousButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@null"
+            android:src="@drawable/arrow_left_button" />
+
+        <!-- Przycisk next -->
+        <ImageButton
+            android:id="@+id/nextButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@null"
+            android:src="@drawable/arrow_right_button" />
+
+    </LinearLayout>
 
 </LinearLayout>
+
