--- a/Fleet_Manager_Android_App/app/src/main/res/layout/ride_panel.xml
+++ b/Fleet_Manager_Android_App/app/src/main/res/layout/ride_panel.xml
@@ -1,19 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="16dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp">
+
+    <!-- Logo -->
+    <ImageView
+        android:id="@+id/logoImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/moloft"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/userName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="24sp"
-        android:text="User Name"
+        android:text="Użytkownik: "
         android:textAlignment="center"
-        android:padding="16dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textAppearance="@style/ClashDisplayFontMediumStyle"
+        android:layout_marginTop="61dp"
+        app:layout_constraintTop_toBottomOf="@id/logoImageView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -22,24 +38,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="72sp"
+        android:textSize="60sp"
+        android:textAppearance="@style/ClashDisplayFontMediumStyle"
         android:text="00:00:00"
         android:textAlignment="center"
-        android:padding="16dp"
-        android:layout_below="@id/userName"
+        android:layout_marginTop="100dp"
         app:layout_constraintTop_toBottomOf="@id/userName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/stopButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Stop"
-        app:layout_constraintTop_toBottomOf="@id/timer"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="stop"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/timer"
+        android:background="@drawable/round_button"
+        android:fontFamily="@font/clash_display_semi_bold"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
