--- a/Fleet_Manager_Android_App/app/src/main/res/layout/standar_user_main_panel.xml
+++ b/Fleet_Manager_Android_App/app/src/main/res/layout/standar_user_main_panel.xml
@@ -1,39 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp">
 
-    <TextView
-        android:id="@+id/welcomeTextView"
+    <!-- Logo -->
+    <ImageView
+        android:id="@+id/logoImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Witaj:"
-        android:textSize="20sp"
+        android:src="@drawable/moloft"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="MissingConstraints"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Witaj -->
     <TextView
-        android:id="@+id/userNameTextView"
-        android:layout_width="wrap_content"
+        android:id="@+id/welcomeTextView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="Witaj:"
+        android:textAppearance="@style/ClashDisplayFontSemiBoldStyle"
         android:textSize="20sp"
+        android:textAlignment="center"
+        android:layout_marginTop="61dp"
+        app:layout_constraintTop_toBottomOf="@id/logoImageView"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="16dp" />
+
+    <!-- Szerokiej drogi -->
+    <TextView
+        android:id="@+id/additionalText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Szerokiej drogi!"
+        android:textAlignment="center"
+        android:textAppearance="@style/ClashDisplayFontSemiBoldStyle"
+        android:textSize="20sp"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/welcomeTextView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="MissingConstraints"/>
+        android:layout_marginStart="16dp" />
 
-    <Button
-        android:id="@+id/startButton"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/startText"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Start"
-        app:layout_constraintTop_toBottomOf="@id/userNameTextView"
+        android:text="Rozpocznij przejazd"
+        android:textAlignment="center"
+        android:textAppearance="@style/ClashDisplayFontSemiBoldStyle"
+        android:textSize="40sp"
+        android:layout_marginTop="100dp"
+        app:layout_constraintTop_toBottomOf="@id/additionalText"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="MissingConstraints"/>
+        android:layout_marginStart="16dp" />
+
+    <!-- Przycisk Start -->
+    <ImageButton
+        android:id="@+id/nextButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@null"
+        android:src="@drawable/arrow_right_button"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/startText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
