--- a/Fleet_Manager_Android_App/app/src/main/res/layout/table_panel.xml
+++ b/Fleet_Manager_Android_App/app/src/main/res/layout/table_panel.xml
@@ -1,13 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
 
+    <ImageView
+        android:id="@+id/logoImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/moloft"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp" />
+
+    <TextView
+        android:id="@+id/titleLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Panel Napraw"
+        android:fontFamily="@font/clash_display_semi_bold"
+        android:textColor="@color/text"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:layout_below="@id/logoImageView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp" />
+
     <HorizontalScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@id/titleLabel">
 
         <ScrollView
             android:layout_width="wrap_content"
