--- a/Fleet_Manager_Android_App/app/src/main/res/values/colors.xml
+++ b/Fleet_Manager_Android_App/app/src/main/res/values/colors.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="primary">#1E1E1E</color>
+    <color name="colorOnPrimary">#F7F7F7</color>
 
-    <color name="white_second">#F7F7F7</color>
-    <color name="purple_new">#BFA9FF</color>
-    <color name="grey">#D9D9D9</color>
+    <color name="secondary">#BFA9FF</color>
+    <color name="colorOnSecondary">#1E1E1E</color>
+
+    <color name="background_color">#F7F7F7</color>
+    <color name="text">#000000</color>
+    <color name="primary_button_background">#1E1E1E</color>
+    <color name="primary_button_font">#F7F7F7</color>
+    <color name="secondary_button_background">#BFA9FF</color>
+
 
 </resources>
