--- a/Fleet_Manager_Android_App/app/src/main/res/layout/activity_permissions.xml
+++ b/Fleet_Manager_Android_App/app/src/main/res/layout/activity_permissions.xml
@@ -14,15 +14,14 @@
         android:layout_marginTop="61dp"
         android:elevation="4dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/titleTextView"
+        app:layout_constraintBottom_toTopOf="@+id/welcomeTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
-        android:id="@+id/titleTextView"
+        android:id="@+id/welcomeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Witaj w aplikacji!"
         style="@style/ClashDisplayFontMediumStyle"
         android:textColor="@color/text"
         android:textSize="24sp"
@@ -38,10 +37,9 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         style="@style/FleetManager.PrimaryButton"
-        android:text="Sprawdź uprawnienia ponownie"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleTextView"/>
+        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
