--- a/Fleet_Manager_Android_App/app/src/main/res/layout/manager_main_panel.xml
+++ b/Fleet_Manager_Android_App/app/src/main/res/layout/manager_main_panel.xml
@@ -25,7 +25,7 @@
         android:textColor="@color/text"
         android:text="Witaj:"
         android:textSize="20sp"
-        android:layout_marginTop="61dp"/>
+        android:layout_marginTop="20dp" />
 
     <!-- UserName -->
     <TextView
@@ -35,7 +35,8 @@
         android:textAppearance="@style/ClashDisplayFontSemiBoldStyle"
         android:textColor="@color/text"
         android:layout_height="wrap_content"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:layout_marginBottom="20dp"/>
 
     <!-- Przycisk "Lista przejazdów" -->
     <Button
