--- a/Fleet_Manager_Android_App/app/src/main/res/layout/ride_panel.xml
+++ b/Fleet_Manager_Android_App/app/src/main/res/layout/ride_panel.xml
@@ -21,15 +21,26 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/userName"
+        android:id="@+id/userNameLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="24sp"
-        android:text="Użytkownik: "
         android:textAlignment="center"
         android:textAppearance="@style/ClashDisplayFontMediumStyle"
         android:layout_marginTop="61dp"
         app:layout_constraintTop_toBottomOf="@id/logoImageView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/userName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="24sp"
+        android:textAlignment="center"
+        android:textAppearance="@style/ClashDisplayFontMediumStyle"
+        android:layout_marginTop="11dp"
+        app:layout_constraintTop_toBottomOf="@id/userNameLabel"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -51,7 +62,8 @@
         android:id="@+id/stopButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="stop"
+        android:text="Stop"
+        android:layout_marginTop="100dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/timer"
