--- a/Fleet_Manager_Android_App/app/src/main/res/layout/ride_tracker_panel.xml
+++ b/Fleet_Manager_Android_App/app/src/main/res/layout/ride_tracker_panel.xml
@@ -25,6 +25,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="16dp"
+        tilesource="Mapnik"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
